Add changes from GitLab
